# BetterLogger

./: .gitmodules  BetterLogger.code-workspace  CMakeLists.txt  main.cpp
lib/spdlog_x64/include/spdlog/: common.h
lib/spdlog_x64/lib/cmake/spdlog/: spdlogConfigVersion.cmake
lib/spdlog_x64/lib/pkgconfig/: spdlog.pc
src/: AWorker.cpp  AWorker.h  BLogger.h  CMakeLists.txt  Logger.cpp  Logger.h
